0025492: the selected subshape does not have topological relationship with orginal shape in OCC680:

returned identity owner location if the selectable object has identity transformation.